Add backend API with frontend combination

--- a/LoanCalculator/ClientApp/src/components/PaybackPlan.css
+++ b/LoanCalculator/ClientApp/src/components/PaybackPlan.css
@@ -3,3 +3,12 @@
     height: 500px;
     overflow: auto;
 }
+
+.result {
+    margin: 20px 0 20px 0;
+}
+
+.text {
+    color: red;
+    font-style: italic;
+}
